--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     gtag('config', 'UA-125736685-3');
   </script>
   <script src="https://pj8kxm23p1h3.statuspage.io/embed/script.js" defer></script>
+  <script src="https://www.google.com/recaptcha/api.js" defer></script>
 </head>
 <body class="mat-app-background">
   <app-root>
