--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 
   <script src="https://pj8kxm23p1h3.statuspage.io/embed/script.js" defer></script>
   <script src="https://www.google.com/recaptcha/api.js" defer></script>
+  <script async src="https://arc.io/widget.min.js#DcfntnS3" defer>
 </head>
 <body class="mat-app-background">
   <app-root>
